--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
 clap-verbosity-flag = "2.0.0"
+env_logger = "0.10.0"
+log = "0.4.17"
