--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,12 @@
+[tool.black]
+line-length = 99
+
 [tool.isort]
-profile = 'black'
+profile = "black"
+line_length = 99
 
 [tool.pylint.format]
-max-line-length = "88"
+max-line-length = "99"
+
+[tool.ruff]
+line-length = 99
